deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lct-api-deployment
spec:
  replicas: 3
  selector: 
    matchLabels:
      app: lct-api
  template:
    metadata:
      labels:
        app: lct-api
    spec:
      containers:
        - name: lct-api
          image: localhost:7000/lct:latest
          imagePullPolicy: Always
          resources:
            requests:
                memory: "200Mi"
                cpu: "200m"
            limits:
                memory: "300Mi"
                cpu: "350m"
