loadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: lct-api-service
spec:
  selector:
    app: lct-api-deployment
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - protocol: TCP
      port: 6008
      targetPort: 80
