service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lct-api-service
  # annotations:
      # service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
      # service.beta.kubernetes.io/do-loadbalancer-sticky-sessions-type: "cookies"
      # service.beta.kubernetes.io/do-loadbalancer-sticky-sessions-cookie-name: "example"
      # service.beta.kubernetes.io/do-loadbalancer-sticky-sessions-cookie-ttl: "60"
spec:
  selector:
    app: lct-api
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - protocol: TCP
      port: 6008
      targetPort: 80
